--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         margin: 0;
         display: flex;
         justify-content: center;
-        background-image: url("./background.png");
+        background-image: url("./back.jpg");
       }
 
       .container {
         width: 390px;
-        background-color: #f1bbba;
+        background-color: #FFD8D8;
         height: 100%;
       }
 
@@ -79,7 +79,7 @@
 
       .photo-description {
         color: white;
-        background-color: #f1bbba;
+        background-color: #FFD8D8;
         width: fit-content;
         padding: 0 20px;
         margin-bottom: 10px;
