--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       .container {
         width: 390px;
-        background-color: #E8D9FF;
+        background-color: #FADAD8;
         height: 100%;
       }
 
