--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ function hideText(number) {
 // 클릭 기능
 // 1. 선택된 사진의 숫자를 가진 텍스트를 alert 형태로 출력해줌
 function alertText(number) {
-   alert(후쿠오카 여행✈💓);
+   alert(후쿠오카 여행✈💗);
 }
     </script>
   </head>
