--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ function alertText(number) {
 </span>
       </div>
       <div class="footer">
-        <p class="f-title">후쿠오카 여행✈💓</p>
+        <p class="f-title">후쿠오카 여행✈💗</p>
         <p class="f-date">2023.01</p>
       </div>
     </div>
