--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       .container {
         width: 390px;
-        background-color: #BA2548;
+        background-color: #F0948D;
         height: 100%;
       }
 
@@ -79,7 +79,7 @@
 
       .photo-description {
         color: white;
-        background-color: #BA2548;
+        background-color: #F0948D;
         width: fit-content;
         padding: 0 20px;
         margin-bottom: 10px;
