--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         margin: 0;
         display: flex;
         justify-content: center;
-        background-image: url("./back.jpg");
+        background-image: url("./background.png");
       }
 
       .container {
